--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -13,13 +14,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "core-js": "^3.36.0",
     "css-loader": "^6.10.0",
     "csv-loader": "^3.0.5",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
@@ -34,6 +38,7 @@
     "lodash": "^4.17.21",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "typescript": "^5.3.3"
   }
