--- a/backend/Makefile
+++ b/backend/Makefile
@@ -72,9 +72,13 @@ vendor:
 # BUILD
 # ==================================================================================== #
 
+current_time = $(shell date --iso-8601=seconds)
+git_description = $(shell git describe --always --dirty)
+linker_flags = 's -X main.buildTime=${current_time} -X main.version=${git_description}'
+
 ## build/api: build the cmd/api application
 # revisit, unable to cross compile to linux
 .PHONY: build/api
 build/api:
 	@echo 'Building cmd/api...'
-	go build -ldflags='-s' -o=./bin/api ./cmd/api
+	go build -ldflags=${linker_flags} -o=./bin/api ./cmd/api
