Managing automatic version numbers

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -73,8 +73,8 @@ vendor:
 # ==================================================================================== #
 
 current_time = $(shell date --iso-8601=seconds)
-git_description = $(shell git describe --always --dirty)
-linker_flags = 's -X main.buildTime=${current_time} -X main.version=${git_description}'
+git_description = $(shell git describe --always --dirty --tags --long)
+linker_flags = "-s -X main.buildTime=${current_time} -X main.version=${git_description}"
 
 ## build/api: build the cmd/api application
 # revisit, unable to cross compile to linux
