Finished caddyfile, makefile command lines,  metrics, and deployment

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -82,3 +82,40 @@ linker_flags = "-s -X main.buildTime=${current_time} -X main.version=${git_descr
 build/api:
 	@echo 'Building cmd/api...'
 	go build -ldflags=${linker_flags} -o=./bin/api ./cmd/api
+	GOOS=linux GOARCH=amd64 go build -ldflags='-s' -o=./bin/linux_amd64/api ./cmd/api
+
+# ==================================================================================== #
+# PRODUCTION
+# ==================================================================================== #
+
+production_host_ip = '64.23.140.84'
+
+## production/connect: connect to the production server
+.PHONY: production/connect
+production/connect:
+	ssh stratcheck@${production_host_ip}
+
+## production/deploy/api: deploy the api to production
+.PHONY: production/deploy/api
+production/deploy/api:
+	rsync -rP --delete ./bin/linux_amd64/api ./migrations stratcheck@${production_host_ip}:~
+	ssh -t stratcheck@${production_host_ip} 'migrate -path ~/migrations -database $$STRATCHECK_DB_DSN up'
+
+## production/configure/api.service: configure the production systemd api.service file
+.PHONY: production/configure/api.service
+production/configure/api.service:
+	rsync -P ./remote/production/api.service stratcheck@${production_host_ip}:~
+	ssh -t stratcheck@${production_host_ip} '\
+		sudo mv ~/api.service /etc/systemd/system/ \
+		&& sudo systemctl enable api \
+		&& sudo systemctl restart api \
+	'
+
+## production/configure/caddyfile: configure the production Caddyfile
+.PHONY: production/configure/caddyfile
+production/configure/caddyfile:
+	rsync -P ./remote/production/Caddyfile stratcheck@${production_host_ip}:~
+	ssh -t stratcheck@${production_host_ip} '\
+		sudo mv ~/Caddyfile /etc/caddy/ \
+		&& sudo systemctl reload caddy \
+	'
